# async_ToDo_List_on_FastAPI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 073a2143e433_create_tables.py  3647d39c2660_initial_migration.py  55020b6369ee_add_deadline_to_task_model.py  5aa4777ccd53_change_relation.py  935a1e2f4cb4_change_base.py  a8eba366373e_change_user_model.py  b86c447ca72c_first_rev.py  bf2ce9b05a20_initial_async_migration.py  c0c6c590b223_create_tables_for_test_db.py  cd468b746400_change_descr_task.py  f0b9730c9a69_create_new_tables.py  f674820d803a_initial_async_migration.py
app/: __init__.py  crud.py  database.py  models.py  routes.py  schemas.py
app/database/: __init__.py  config.py  db.py
app/logs/: __init__.py  service.py
app/models/: __init__.py  models.py
app/security/: __init__.py  auth.py  config.py  schemas.py  utils.py
app/services/: __init__.py  task.py  user.py
app/tasks/: __init__.py  crud.py  schemas.py  tasks_routes.py
app/users/: __init__.py  crud.py  schemas.py  users_routes.py
tests/: __init__.py  conftest.py  test_tasks.py  test_todo.py  test_users.py
