[project]
name = "todo-list"
version = "0.1.0"
description = "async todo list"
authors = [
    {name = "koul1n", email = "na1zyotb@gmail.com"}
]
readme = "README.md"
requires-python = ">3.9.0,<3.9.1 || >3.9.1,<3.13"
dependencies = [
    "aioredis==2.0.1",
    "alembic==1.14.0",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "appnope==0.1.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "asttokens==3.0.0",
    "async-timeout==5.0.1",
    "asyncpg==0.30.0",
    "attrs==24.3.0",
    "authx==1.4.1",
    "backcall==0.2.0",
    "bcrypt==4.2.1",
    "beautifulsoup4==4.12.3",
    "black==24.10.0",
    "bleach==6.2.0",
    "build==1.2.2.post1",
    "CacheControl==0.14.2",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "cleo==2.1.0",
    "click==8.1.7",
    "crashtest==0.4.1",
    "cryptography==44.0.0",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "distlib==0.3.9",
    "dnspython==2.7.0",
    "docopt==0.6.2",
    "dulwich==0.22.7",
    "ecdsa==0.19.0",
    "email_validator==2.2.0",
    "executing==2.1.0",
    "Faker==33.1.0",
    "fastapi==0.115.6",
    "fastapi-users==14.0.1",
    "fastjsonschema==2.21.1",
    "filelock==3.16.1",
    "flake8==7.1.1",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.0.0",
    "installer==0.7.0",
    "ipython==8.12.3",
    "isort==5.13.2",
    "itsdangerous==2.2.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.0.1",
    "jaraco.functools==4.1.0",
    "jedi==0.19.2",
    "Jinja2==3.1.5",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "jupyterlab_pygments==0.3.0",
    "keyring==25.6.0",
    "loguru==0.7.3",
    "makefun==1.15.6",
    "Mako==1.3.8",
    "MarkupSafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mistune==3.1.0",
    "more-itertools==10.6.0",
    "msgpack==1.1.0",
    "mypy-extensions==1.0.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.5",
    "nbformat==5.10.4",
    "packaging==24.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pipreqs==0.5.0",
    "pkginfo==1.12.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "poetry==2.0.1",
    "poetry-core==2.0.1",
    "prompt_toolkit==3.0.48",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pwdlib==0.2.1",
    "pyasn1==0.6.1",
    "pycodestyle==2.12.1",
    "pycparser==2.22",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "pydantic_core==2.27.2",
    "pyflakes==3.2.0",
    "Pygments==2.19.1",
    "PyJWT==2.10.1",
    "pyproject_hooks==1.2.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-mock==3.14.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "python-multipart==0.0.20",
    "pytz==2024.2",
    "pyzmq==26.2.0",
    "RapidFuzz==3.11.0",
    "referencing==0.36.1",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rpds-py==0.22.3",
    "rsa==4.9",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "SQLAlchemy==2.0.36",
    "stack-data==0.6.3",
    "starlette==0.41.3",
    "tinycss2==1.4.0",
    "tomlkit==0.13.2",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "trove-classifiers==2025.1.15.22",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "virtualenv==20.29.1",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "xattr==1.1.4",
    "yarg==0.1.9"
]
